[package]
name = "tonic-lb"
version = "0.0.1"
edition = "2021"
description = "A Grpc name resolver for tonic"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.90.0", features = ["runtime", "client", "derive"] }
tokio = "1.37.0"
tonic = "0.11.0"
tower = "0.4.13"
k8s-openapi = { version = "0.21.1", features = ["latest"] }
futures = "0.3.30"
thiserror = "1.0.58"
anyhow = "1.0.82"
