[package]
name = "tonic-lb"
version = "0.0.2"
edition = "2021"
description = "A Grpc name resolver for tonic"
license = "MIT"
homepage = "https://github.com/yoogoc/tonic-lb"
repository = "https://github.com/yoogoc/tonic-lb"
keywords = ["tonic", "loadbalance", "kube", "kubernetes", "async", "api", "web"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.90.0", features = ["runtime", "client", "derive"] }
tokio = "1.37.0"
tonic = "0.11.0"
tower = "0.4.13"
k8s-openapi = { version = "0.21.1", default-features = false }
futures = "0.3.30"
thiserror = "1.0.58"
anyhow = "1.0.82"

[features]
default = ["kube-latest"]
kube-earliest=["k8s-openapi/earliest"]
kube-latest=["k8s-openapi/latest"]
kube-v1_24=["k8s-openapi/v1_24"]
kube-v1_25=["k8s-openapi/v1_25"]
kube-v1_26=["k8s-openapi/v1_26"]
kube-v1_27=["k8s-openapi/v1_27"]
kube-v1_28=["k8s-openapi/v1_28"]
kube-v1_29=["k8s-openapi/v1_29"]
